[gd_scene load_steps=13 format=3 uid="uid://bmqdrl4gr8ikv"]

[ext_resource type="Script" path="res://scenes/ui/menu/menu.gd" id="1_bjv5w"]
[ext_resource type="PackedScene" uid="uid://dk3207gtw8dmw" path="res://scenes/ui/menu/main_menu/main_menu.tscn" id="1_hb36d"]
[ext_resource type="PackedScene" uid="uid://day3oq358din7" path="res://scenes/ui/menu/start_menu/start_menu.tscn" id="2_ruy6j"]
[ext_resource type="PackedScene" uid="uid://3phbp3v6np27" path="res://scenes/ui/menu/settings_menu/settings_menu.tscn" id="3_1n28g"]
[ext_resource type="PackedScene" uid="uid://c3ovvx3oxxrwr" path="res://scenes/ui/menu/character_selection_menu/character_selection_menu.tscn" id="5_gl5ct"]
[ext_resource type="PackedScene" uid="uid://c7yilrpey1l1o" path="res://scenes/ui/menu/map_selection_menu/map_selection_menu.tscn" id="7_g6686"]
[ext_resource type="PackedScene" uid="uid://dp6eb6f3ixlrh" path="res://scenes/ui/menu/game_options_menu/game_options_menu.tscn" id="8_d3ybf"]
[ext_resource type="PackedScene" uid="uid://b1c0j56ucoox" path="res://scenes/ui/menu/online_game_menu/online_game_menu.tscn" id="9_txm8y"]
[ext_resource type="PackedScene" uid="uid://iavx1djfsi0u" path="res://scenes/ui/menu/multiplayer_connecting/multiplayer_connecting.tscn" id="9_yo0ud"]
[ext_resource type="PackedScene" uid="uid://bgohvgircsopv" path="res://scenes/ui/menu/player_list/player_list.tscn" id="10_eejs4"]

[sub_resource type="InputEventAction" id="InputEventAction_pbehn"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_0heav"]
events = [SubResource("InputEventAction_pbehn")]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjv5w")

[node name="StartMenu" parent="." instance=ExtResource("2_ruy6j")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MenuContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("1_hb36d")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SettingsMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("3_1n28g")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CharacterSelectionMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("5_gl5ct")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MapSelectionMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("7_g6686")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GameOptionsMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("8_d3ybf")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OnlineGameMenu" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("9_txm8y")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MultiplayerConnecting" parent="MenuContainer/HBoxContainer2/PanelContainer" instance=ExtResource("9_yo0ud")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PlayerList" parent="MenuContainer/HBoxContainer2" instance=ExtResource("10_eejs4")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
shortcut = SubResource("Shortcut_0heav")
text = "Back"

[node name="GameOptionsButton" type="Button" parent="MenuContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Options"

[connection signal="start_game" from="StartMenu" to="." method="_on_start_menu_start_game"]
[connection signal="local_game" from="MenuContainer/HBoxContainer2/PanelContainer/MainMenu" to="." method="_on_main_menu_local_game"]
[connection signal="online_game" from="MenuContainer/HBoxContainer2/PanelContainer/MainMenu" to="." method="_on_main_menu_online_game"]
[connection signal="settings" from="MenuContainer/HBoxContainer2/PanelContainer/MainMenu" to="." method="_on_main_menu_settings"]
[connection signal="character_selected" from="MenuContainer/HBoxContainer2/PanelContainer/CharacterSelectionMenu" to="." method="_on_character_selection_menu_character_selected"]
[connection signal="map_selected" from="MenuContainer/HBoxContainer2/PanelContainer/MapSelectionMenu" to="." method="_on_map_selection_menu_map_selected"]
[connection signal="online_game_toggled" from="MenuContainer/HBoxContainer2/PanelContainer/GameOptionsMenu" to="." method="_on_game_options_menu_online_game_toggled"]
[connection signal="join_online_game" from="MenuContainer/HBoxContainer2/PanelContainer/OnlineGameMenu" to="." method="_on_online_game_menu_join_online_game"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/GameOptionsButton" to="." method="_on_game_options_button_pressed"]
